src/objects/appsolutely__Creditsafe_Company_Banker__c.object
<CustomObject>
    <description>A CreditsafeCompanyBankerV2</description>
    <fields>
        <fullName>appsolutely__Bank_Code__c</fullName>
        <description>Bank code associated with the bank.</description>
        <label>Bank Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__City__c</fullName>
        <description>The City of the Address.</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Country__c</fullName>
        <description>The Country of the Address.</description>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Creditsafe_Company_Report_Full__c</fullName>
        <description>A detailed report about a company.</description>
        <label>Creditsafe Company Report</label>
        <referenceTo>appsolutely__Creditsafe_Company_Report_Full__c</referenceTo>
        <relationshipLabel>Bankers</relationshipLabel>
        <relationshipName>Bankers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>appsolutely__Full_Address__c</fullName>
        <description>Full Address</description>
        <label>Full Address</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>appsolutely__House_Number_Addition__c</fullName>
        <description>The House number addition of the Address.</description>
        <label>House Number Addition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__House_Number__c</fullName>
        <description>The House number of the Address.</description>
        <label>House Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Name__c</fullName>
        <description>Name of bank that the company holds an account with.</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Postcode__c</fullName>
        <description>The Postcode of the Address.</description>
        <label>Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Street__c</fullName>
        <description>The Street of the Address.</description>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Telephone__c</fullName>
        <description>Phone number.</description>
        <label>Telephone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Creditsafe Company Banker</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Creditsafe Company Banker</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Creditsafe Company Bankers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>